=== SVN

* Implemented Database#each method for quickly retrieving records with arbitrary SQL (thanks Aman Gupta).

* Fixed bug in postgres adapter where a LiteralString would be literalized as a regular String.

* Fixed SQLite insert with subquery (#68).

* Reverted back to hashes as default mode. Added Sequel.use_array_tuples and Sequel.use_hash_tuples methods.

* Fixed problem with arrays with keys when using #delete.

* Implemented ArrayKeys as substitute for ArrayFields.

* Added Dataset#each_hash method.

* Rewrote SQLite::Database#transaction to use sqlite3-ruby library implementation of transactions.

* Fixed Model.destroy_all to work correctly in cases where no before_destroy hook is defined and an after_destroy hook is defined.

* Restored Model.has_hooks? implementation.

* Changed Database#<< to strip comments and whitespace only when an array is given.

* Changed Schema::Generator#primary_key to accept calls with the type argument omitted.

* Hooks can now be prepended or appended by choice.

* Changed Model.subset to define filter method on the underlying dataset instead of the model class.

* Fixed Dataset#transform to work with array fields.

* Added Dataset#to_csv method.

* PrettyTable can now extract column names from arrayfields.

* Converted ado, dbi, odbc adapters to use arrayfields instead of hashes.

* Fixed composite key support.

* Fixed Dataset#insert_sql, update_sql to support array fields.

* Converted sqlite, mysql, postgres adapters to use arrayfields instead of hashes.

* Extended Dataset#from to auto alias sub-queries.

* Extended Dataset#from to accept hash for aliasing tables.

* Added before_update, after_update hooks.

=== 0.2.1.1 (2007-10-07)

* Added Date literalization to sqlite adapter (#60).

* Changed Model.serialize to allow calling it after the class is defined (#59).

* Fixed after_create hooks to allow calling save inside the hook (#58).

* Fixed MySQL quoting of sql functions (#57).
